welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean = {
                   ^SlugSnail:32: error: identifier expected but '}' found.
}
^