welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt() {
  while(estSurBiscuit()==false)
  {
    if(isFacingTrail(Color.yellow))
    {
      avance()
      baisseBrosse()
      leveBrosse()
    }else
    {
      gauche();
    }
  }
  prendBiscuit()
}

def isFacingTrail(c):Boolean = {
    if(estFaceMur())return false;
  	avance()
  	if(getCouleurSol()==c)
  	{
      recule()
      return true
    }
  	recule()
  	return false
}